--- a/stows/waybar/.config/waybar/style.css
+++ b/stows/waybar/.config/waybar/style.css
@@ -2,7 +2,7 @@
 
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, Fira Code, Roboto, Helvetica, Arial, sans-serif;
+    font-family: FontAwesome, JetBrains Mono, Fira Code, Roboto, Helvetica, Arial, sans-serif;
     font-size: 14px;
 }
 
